binfits now working (with development version of lme); cardfits still over-estimate, and the correction is not obvious.

--- a/cards/Makefile
+++ b/cards/Makefile
@@ -2,7 +2,7 @@
 ### Hooks for the editor to set the default target
 current: target
 
-target pngtarget pdftarget vtarget acrtarget pushtarget: binfits.Rout 
+target pngtarget pdftarget vtarget acrtarget pushtarget: cardfits.Rout 
 
 ##################################################################
 
@@ -23,6 +23,7 @@ sim.Rout: sim.R
 fakesim.Rout: sim.Rout fakesim.R
 
 binfits.Rout: fakesim.Rout binfits.R
+cardfits.Rout: fakesim.Rout cardfits.R
 
 Archive += .fakesim.RData
 
